@@ -7,6 +7,7 @@ v0.9
 	make remote images non-blocking
 	preserve aspect ratio of images (up to max of 160x160)
 	use pygtk's systemtray support
+	crossfading
 
 Future:
 	allow multiple columns?
