@@ -1,7 +1,9 @@
 v0.9 - Pending
 	+ Use local artwork (cover.jpg, folder.jpg) first, if it exists
 	  (requires music_directory to be specified in preferences)
+	+ Fetch higher-resolution cover art
 	+ Popup song notification on un-pause
+	+ Store cover art in ~/.covers for consistency with gmpc
 	+ Bug: Prevent infrequent crash when fetching album art
 
 v0.8.1 - October 19, 2006
